[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fh-fablib"
dynamic = ["version"]
description = "fh-fablib"
readme = "README.rst"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    { name = "Matthias Kestenholz", email = "mk@feinheit.ch" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "fabric>=3",
    "speckenv>=6.2",
]

[project.scripts]
fl = "fabric.main:program.run"

[project.urls]
Homepage = "https://github.com/feinheit/fh-fablib/"

[tool.hatch.version]
path = "fh_fablib/__init__.py"

[tool.ruff]
fix = true
show-fixes = true
target-version = "py39"

[tool.ruff.lint]
extend-select = [
  # pyflakes, pycodestyle
  "F", "E", "W",
  # mmcabe
  "C90",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # flake8-boolean-trap
  "FBT",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # flake8-django
  "DJ",
  # flake8-pie
  "PIE",
  # flake8-simplify
  "SIM",
  # flake8-gettext
  "INT",
  # pygrep-hooks
  "PGH",
  # pylint
  "PL",
  # unused noqa
  "RUF100",
]
extend-ignore = [
  # Allow zip() without strict=
  "B905",
  # No line length errors
  "E501",
  # Fabric/invoke do not support keyword-only arguments unfortunately
  "FBT002",
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"*/migrat*/*" = [
  # Allow using PascalCase model names in migrations
  "N806",
  # Ignore the fact that migration files are invalid module names
  "N999",
]
