[metadata]
name = fh_fablib
version = 1.0.20221129
description = fh-fablib
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/feinheit/fh-fablib/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = find:
install_requires =
    fabric<2.7
    speckenv>=3.3
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    fl = fabric.main:program.run
